Add dependencies, render basic styles, add components for event list

--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,16 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+      <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+  </head>
+  <header>
+    <h1>Historical Event Finder</h1>
+  </header>
+  <body>
+    <div id="app"></div>
+    <script type"text/javascript" src="bundle.js"></script>
+  </body>
+  <footer>
+    <h4> © Raymond Cabrera 2018 </h4>
+  </footer>
+</html>
