--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <header>
     <h1>Historical Event Finder</h1>
